# nomad-game

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  ideas.md  todo.md
nomad/: CMakeLists.txt
nomad-ai/: CMakeLists.txt
nomad-ai/source/: player.cpp  player.h
nomad-art/ideas/: chars1.ase
nomad-game/: CMakeLists.txt
nomad-game/source/: db.cpp  db.h  factory.cpp  factory.h  forward.h  game.cpp  game.h  game_view.cpp  game_view.h
nomad-headers/: CMakeLists.txt
nomad-headers/source/: dummy.cpp  events.h  forward.h  game.h  objects.h  player.h  uuid.h
nomad-human/: CMakeLists.txt
nomad-human/source/: player.cpp  player.h
nomad-net/: CMakeLists.txt
nomad-net/source/: net.cpp  net.h
nomad-objects/: CMakeLists.txt
nomad-objects/source/: villager.cpp  villager.h
nomad-server/: CMakeLists.txt
nomad-server/source/: server.cpp  server.h
nomad-util/: CMakeLists.txt
nomad-util/source/: buffer2d.h  dummy.cpp  fsm.h  geometric.h  log.h  numeric.h  profiler.h  queue.h  ref.h  sdl.h  socket.h  stack.h  timer.h
nomad-window/: CMakeLists.txt
nomad-window/source/: draw.cpp  window.cpp  window.h
nomad/source/: main.cpp  nomad.cpp  nomad.h
